# zarchiver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.779383514693BEC2.idx
